--- a/values.yaml
+++ b/values.yaml
@@ -1,34 +1,28 @@
 # Default values for blender.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
-replicaCount: 1
+slaveReplicaCount: 4
 image:
-  repository: nginx
-  tag: stable
+  repository: d3v0x/blender-render-cluster
   pullPolicy: IfNotPresent
 service:
-  name: nginx
+  name: blender
   type: ClusterIP
   externalPort: 80
   internalPort: 80
+
 ingress:
-  enabled: false
+  enabled: true
   # Used to create Ingress record (should used with service.type: ClusterIP).
   hosts:
-    - chart-example.local
+    - blender.kube.kramergroup.science
   annotations:
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  tls:
-    # Secrets must be manually created in the namespace.
-    # - secretName: chart-example-tls
-    #   hosts:
-    #     - chart-example.local
+  # tls:
+  #   # Secrets must be manually created in the namespace.
+  #   - secretName: chart-example-tls
+  #     hosts:
+  #     - chart-example.local
 resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious 
-  # choice for the user. This also increases chances charts run on environments with little 
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following 
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
   # limits:
   #  cpu: 100m
   #  memory: 128Mi
